--- a/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
+++ b/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
@@ -4,13 +4,16 @@
              xmlns:prism="clr-namespace:Prism.Mvvm;assembly=Prism.Forms"
              prism:ViewModelLocator.AutowireViewModel="True"
              xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
-             x:Class="BarcodeReaderApp.Pages.BarcodeReaderPage">
+             x:Class="BarcodeReaderApp.Pages.BarcodeReaderPage"
+             Title="Scanner">
     <AbsoluteLayout>
         <zxing:ZXingScannerView x:Name="scannerView"
                                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                 AbsoluteLayout.LayoutFlags="All"
-                                IsScanning="True"
-                                OnScanResult="ScannerViewOnScanResult" />
+                                IsScanning="true"
+                                IsAnalyzing="true"
+                                ScanResultCommand="{Binding OnScanResultCommand}"
+                                Result="{Binding ScanResult}" />
 
         <zxing:ZXingDefaultOverlay AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                    AbsoluteLayout.LayoutFlags="All"
