--- a/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
+++ b/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
@@ -10,11 +10,11 @@
         <zxing:ZXingScannerView x:Name="scannerView"
                                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                 AbsoluteLayout.LayoutFlags="All"
-                                IsScanning="true"
                                 ScanResultCommand="{Binding OnScanResultCommand}"
                                 Result="{Binding ScanResult, Mode=TwoWay}" />
 
-        <zxing:ZXingDefaultOverlay AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
+        <zxing:ZXingDefaultOverlay x:Name="scannerOverlay"
+                                   AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                    AbsoluteLayout.LayoutFlags="All"
                                    BottomText="Ajusta en la parte central el código del producto"
                                    ShowFlashButton="false"
