--- a/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
+++ b/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
@@ -10,6 +10,7 @@
         <zxing:ZXingScannerView x:Name="scannerView"
                                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                 AbsoluteLayout.LayoutFlags="All"
+                                IsScanning="{Binding IsScanning}"
                                 ScanResultCommand="{Binding OnScanResultCommand}"
                                 Result="{Binding ScanResult, Mode=TwoWay}" />
 
