--- a/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
+++ b/BarcodeReaderApp/BarcodeReaderApp/Pages/BarcodeReaderPage.xaml
@@ -6,11 +6,15 @@
              xmlns:zxing="clr-namespace:ZXing.Net.Mobile.Forms;assembly=ZXing.Net.Mobile.Forms"
              x:Class="BarcodeReaderApp.Pages.BarcodeReaderPage"
              Title="Scanner">
+    <ContentPage.ToolbarItems>
+        <ToolbarItem x:Name="flashSwitchItem" Icon="flash_off.png" Command="{Binding ToggleCameraFlashCommand}" />
+    </ContentPage.ToolbarItems>
     <AbsoluteLayout>
         <zxing:ZXingScannerView x:Name="scannerView"
                                 AbsoluteLayout.LayoutBounds="0, 0, 1, 1"
                                 AbsoluteLayout.LayoutFlags="All"
                                 IsScanning="{Binding IsScanning}"
+                                IsTorchOn="{Binding IsTorchOn}"
                                 ScanResultCommand="{Binding OnScanResultCommand}"
                                 Result="{Binding ScanResult, Mode=TwoWay}" />
 
