--- a/BarcodeReaderApp/BarcodeReaderApp/Pages/CustomNavigationPage.xaml
+++ b/BarcodeReaderApp/BarcodeReaderApp/Pages/CustomNavigationPage.xaml
@@ -1,7 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <NavigationPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             BarBackgroundColor="#425156"
              x:Class="BarcodeReaderApp.Pages.CustomNavigationPage">
-    
+    <NavigationPage.BarBackgroundColor>
+        <OnPlatform x:TypeArguments="Color">
+            <On Platform="Android" Value="#425156" />
+        </OnPlatform>
+    </NavigationPage.BarBackgroundColor>
 </NavigationPage>
